add google oauth2 integration

--- a/imem/src/app/dashboard/userdetails.gentelella/userdetails-g.component.html
+++ b/imem/src/app/dashboard/userdetails.gentelella/userdetails-g.component.html
@@ -48,7 +48,7 @@
                   <img class="img-responsive avatar-view" src="http://lorempixel.com/g/200/200/" alt="Avatar" title="Change the avatar">
                 </div>
               </div>
-              <h3>{{_authService.sessionUser.email}}</h3>
+              <!--<h3>{{_authService.sessionUser.email}}</h3>-->
               <ul class="list-unstyled user_data">
                 <li *ngIf="!_authService.isAdminSession()"><i class="fa fa-user user-profile-icon"></i> Студент#
                 </li>
