--- a/imem/src/app/dashboard/students.component/students.component.html
+++ b/imem/src/app/dashboard/students.component/students.component.html
@@ -1,4 +1,5 @@
-<ng-table [config]="config"
+<div style="height:800px;">
+    <ng-table [config]="config"
           (tableChanged)="onChangeTable(config)"
           (cellClicked)="onCellClick($event)"
           [rows]="rows" [columns]="columns">
@@ -15,6 +16,8 @@
 </pagination>
 
 <pre *ngIf="config.paging" class="card card-block card-header">Page: {{page}} / {{numPages}}</pre>
+<div class="clearfix"></div>
+</div>
 <!--<div class="row">
     <data-table id="persons-grid"
         headerTitle="Студенти учбового порталу ІМЕМ"
