change main user detail page (declarative ng2 forms) v0.1

--- a/imem/src/app/dashboard/sidebar.gentelella/sidebar-g.component.html
+++ b/imem/src/app/dashboard/sidebar.gentelella/sidebar-g.component.html
@@ -53,7 +53,8 @@
                   <ul class="nav side-menu">
                     <!--<li><a routerLink="/dashboard/calendar"><i class="fa fa-calendar"></i>Календар<span class="fa fa-chevron-right"></span></a>
                     </li>-->
-                    <li><a routerLink="/dashboard/requests"><i class="fa fa-bell-o"></i> Заявки Студентів <span class="badge bg-green" style="float:right;">1</span></a>
+                    <li><a routerLink="/dashboard/requests"><i class="fa fa-bell-o"></i> Заявки Студентів  <span class="fa fa-chevron-right"></span></a>
+                    <!--<span class="badge bg-green" style="float:right;">1</span>-->
                     </li>
                   </ul>
                 </div>
