courses/students set up

--- a/imem/src/app/dashboard/courses.component/courses.component.html
+++ b/imem/src/app/dashboard/courses.component/courses.component.html
@@ -1,3 +1,26 @@
+<div class="page-title">
+	<div class="title_left">
+		<!--<h3>Список заявок студентів на курси</h3>-->
+	</div>
+</div>
+<div class="clearfix"></div>
+<div class="row">
+	<div class="col-md-12">
+		<div class="x_panel">
+			<div class="x_title">
+				<h2>Курси</h2>
+				<ul class="nav navbar-right panel_toolbox">
+					<li><i class="fa fa-leanpub" aria-hidden="true" style="font-size: 32pt;"></i>
+					</li>
+				</ul>
+				<div class="clearfix"></div>
+			</div>
+			<div class="x_content">
+               <courses-table></courses-table>
+			</div>
+		</div>
+	</div>
+</div>
 <!--<div class="row">
 
 	<div style="margin: auto; max-width: 1000px; margin-bottom: 50px;">
