--- a/imem/src/app/dashboard/request-panel/request-panel.component.html
+++ b/imem/src/app/dashboard/request-panel/request-panel.component.html
@@ -11,6 +11,10 @@
 		<div class="x_panel">
 			<div class="x_title">
 				<h2>Заявки</h2>
+				<ul class="nav navbar-right panel_toolbox">
+					<li><i class="fa  fa-clock-o" aria-hidden="true" style="font-size: 32pt;"></i>
+					</li>
+				</ul>
 				<div class="clearfix"></div>
 			</div>
 			<div class="x_content">
