--- a/imem/src/app/dashboard/student.component/student.component.html
+++ b/imem/src/app/dashboard/student.component/student.component.html
@@ -1,1 +1,24 @@
-<div class="div">STUDENT DETAILS{{id}}</div>
+<div class="page-title">
+	<div class="title_left">
+		<h3>Сторінка студента</h3>
+	</div>
+</div>
+<div class="clearfix"></div>
+<div class="row">
+	<div class="col-md-12">
+		<div class="x_panel">
+			<div class="x_title">
+				<h2>Студент [Name]</h2>
+				<ul class="nav navbar-right panel_toolbox">
+					<li><a class="" (click)="navigateToParent()"><i class="fa fa-reply-all"></i><b> Назад</b></a>
+					</li>
+				</ul>
+				<div class="clearfix"></div>
+			</div>
+			<div class="x_content">
+				<div class="div">STUDENT DETAILS{{id}}</div>
+				<div class="clearfix"></div>
+			</div>
+		</div>
+	</div>
+</div>
