--- a/imem/src/app/dashboard/course.component/course.component.html
+++ b/imem/src/app/dashboard/course.component/course.component.html
@@ -1,18 +1,35 @@
-<p class="font-gray-dark">
-    Загальна інформація про курс
-</p>
-<div class="col-md-8 center-margin">
-    <fieldset disabled>
-    <form class="form-horizontal form-label-left">
-        <div class="form-group">
-            <label>Назва</label>
-            <input class="form-control" value="Базовий курс">
-        </div>
-        <div class="form-group">
-            <label>Опис</label>
-                <textarea style="height:200px;" class="resizable_textarea form-control" placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."></textarea>
-        </div>
-    </form>
-    </fieldset>
+<div class="page-title">
+    <div class="title_left">
+        <h3>Загальна інформація про курс</h3>
+    </div>
 </div>
-<lectures></lectures>
+<div class="clearfix"></div>
+<div class="row">
+    <div class="col-md-12">
+        <div class="x_panel">
+            <div class="x_title">
+                <h2>Курс [NAME]</h2>
+                <ul class="nav navbar-right panel_toolbox">
+					<li><a class="" (click)="navigateToParent()"><i class="fa fa-reply-all"></i><b> Назад</b></a>
+					</li>
+				</ul>
+                <div class="clearfix"></div>
+            </div>
+            <div class="x_content">
+                <fieldset disabled>
+                    <form class="form-horizontal form-label-left">
+                        <div class="form-group">
+                            <label>Назва</label>
+                            <input class="form-control" value="Базовий курс">
+                        </div>
+                        <div class="form-group">
+                            <label>Опис</label>
+                            <textarea style="height:200px;" class="resizable_textarea form-control" placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."></textarea>
+                        </div>
+                    </form>
+                </fieldset>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+    </div>
+</div>
