--- a/imem/src/app/dashboard/students.component/students.component.html
+++ b/imem/src/app/dashboard/students.component/students.component.html
@@ -1,22 +1,41 @@
-<div style="height:800px;">
-    <ng-table [config]="config"
-          (tableChanged)="onChangeTable(config)"
-          (cellClicked)="onCellClick($event)"
-          [rows]="rows" [columns]="columns">
-</ng-table>
-<pagination *ngIf="config.paging"
-            class="pagination-sm"
-            [totalItems]="length"
-            [itemsPerPage]="itemsPerPage"
-            [maxSize]="maxSize"
-            [boundaryLinks]="true"
-            [rotate]="false"
-            (pageChanged)="onChangeTable(config, $event)"
-            (numPages)="numPages = $event">
-</pagination>
-
-<pre *ngIf="config.paging" class="card card-block card-header">Page: {{page}} / {{numPages}}</pre>
+<div class="page-title">
+	<div class="title_left">
+		<!--<h3>Список заявок студентів на курси</h3>-->
+	</div>
+</div>
 <div class="clearfix"></div>
+<div class="row">
+	<div class="col-md-12">
+		<div class="x_panel">
+			<div class="x_title">
+				<h2>Студенти</h2>                
+				<ul class="nav navbar-right panel_toolbox">
+					<li><i class="fa fa-graduation-cap" aria-hidden="true" style="font-size: 32pt;"></i>
+					</li>
+				</ul>
+				<div class="clearfix"></div>
+			</div>
+			<div class="x_content">
+                <ng-table [config]="config"
+                    (tableChanged)="onChangeTable(config)"
+                    (cellClicked)="onCellClick($event)"
+                    [rows]="rows" [columns]="columns">
+                </ng-table>
+                <pagination *ngIf="config.paging"
+                            class="pagination-sm"
+                            [totalItems]="length"
+                            [itemsPerPage]="itemsPerPage"
+                            [maxSize]="maxSize"
+                            [boundaryLinks]="true"
+                            [rotate]="false"
+                            (pageChanged)="onChangeTable(config, $event)"
+                            (numPages)="numPages = $event">
+                </pagination>
+                <pre *ngIf="config.paging" class="card card-block card-header">Page: {{page}} / {{numPages}}</pre>
+                <div class="clearfix"></div>
+			</div>
+		</div>
+	</div>
 </div>
 <!--<div class="row">
     <data-table id="persons-grid"
