--- a/imem/src/app/dashboard/userdetails.gentelella/userdetails-g.component.html
+++ b/imem/src/app/dashboard/userdetails.gentelella/userdetails-g.component.html
@@ -1,14 +1,14 @@
 <div class="" style="height:800px;">
   <div class="page-title">
-    <div class="title_left">
+    <!--<div class="title_left">
       <h3>Головна сторінка учасника порталу</h3>
+    </div>-->
     </div>
-    <div class="student">
       <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">
           <div class="x_panel">
             <div class="x_title">
-              <h2>Профіль</h2>
+              <h2>Головна сторінка учасника порталу</h2>
               <div class="clearfix"></div>
             </div>
             <div class="x_content">
@@ -133,7 +133,7 @@
                               <div class="clearfix"></div>
                             </div>
                             <div class="x_content">
-                              #content
+                              <courses-table [userId]="123" [generalColumns]="courseListConfig.columns"></courses-table>
                             </div>
                           </div>
                         </div>
@@ -146,7 +146,5 @@
           </div>
         </div>
 
-      </div>
-    </div>
 
     <!-- /page content -->
