--- a/imem/src/app/login/login.component.html
+++ b/imem/src/app/login/login.component.html
@@ -35,8 +35,8 @@
 							 </div>
 						</div>-->
 						<div>
-							<div class="btn btn-default submit" (click)="login(1)" id="googleBtn">test login</div>
-							<div class="btn btn-default submit" (click)="login(2)" id="googleBtn">test login2</div>
+							<div class="btn btn-default submit" (click)="login(1)" id="googleBtn">student</div>
+							<div class="btn btn-default submit" (click)="login(2)" id="googleBtn">admin</div>
 							<!--<a class="btn btn-default submit" (click)="login()" routerLink="" tabindex="3">Увійти</a>-->
 							<!--<a class="reset_pass" routerLink="/restorepassword" tabindex="4">Забув пароль?</a>-->
 						</div>
