google calendar / demo comment

--- a/imem/src/app/dashboard/calendar.gentelella/calendar.component.html
+++ b/imem/src/app/dashboard/calendar.gentelella/calendar.component.html
@@ -15,13 +15,17 @@
 				<div class="clearfix"></div>
 			</div>
 			<div class="x_content">
-				<div id='calendar'></div>
+				<div class="row">
+					<div  class= "col-md-10 col-center" style="height: 650px;">
+						<iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;height=600&amp;wkst=2&amp;hl=uk&amp;bgcolor=%23336666&amp;src=imem.portal%40gmail.com&amp;color=%231B887A&amp;ctz=Europe%2FKiev" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
 </div>
 
-<div id="CalenderModalNew" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<!--<div id="CalenderModalNew" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 	<div class="modal-dialog">
 		<div class="modal-content">
 
@@ -53,8 +57,8 @@
 			</div>
 		</div>
 	</div>
-</div>
-<div id="CalenderModalEdit" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+</div>-->
+<!--<div id="CalenderModalEdit" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 	<div class="modal-dialog">
 		<div class="modal-content">
 
@@ -91,5 +95,5 @@
 </div>
 
 <div id="fc_create" data-toggle="modal" data-target="#CalenderModalNew"></div>
-<div id="fc_edit" data-toggle="modal" data-target="#CalenderModalEdit"></div>
+<div id="fc_edit" data-toggle="modal" data-target="#CalenderModalEdit"></div>-->
 <!-- /calendar modal -->
