--- a/imem/src/app/dashboard/course.component/course.component.html
+++ b/imem/src/app/dashboard/course.component/course.component.html
@@ -10,26 +10,89 @@
             <div class="x_title">
                 <h2>Курс [NAME]</h2>
                 <ul class="nav navbar-right panel_toolbox">
-					<li><a class="" (click)="navigateToParent()"><i class="fa fa-reply-all"></i><b> Назад</b></a>
-					</li>
-				</ul>
+                    <li><a class="" (click)="navigateToParent()"><i class="fa fa-reply-all"></i><b> Назад</b></a>
+                    </li>
+                </ul>
                 <div class="clearfix"></div>
             </div>
             <div class="x_content">
-                <fieldset disabled>
-                    <form class="form-horizontal form-label-left">
-                        <div class="form-group">
-                            <label>Назва</label>
-                            <input class="form-control" value="Базовий курс">
-                        </div>
-                        <div class="form-group">
-                            <label>Опис</label>
-                            <textarea style="height:200px;" class="resizable_textarea form-control" placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."></textarea>
-                        </div>
-                    </form>
-                </fieldset>
+                <form class="form-horizontal form-label-left"  #courseForm="ngForm" (ngSubmit)="onSubmit()">
+                    <div class="form-group">
+                        <label>Назва</label>
+                        <input class="form-control" value="Базовий курс" required [readonly]="submitted">
+                    </div>
+                    <div class="form-group">
+                        <label>Опис</label>
+                        <textarea style="height:200px;"
+                            class="resizable_textarea form-control"
+                            [readonly]="submitted"
+                            placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."></textarea>
+                    </div>
+                    <div class="form-group" align="center"  [hidden]="submitted">
+                        <button type="submit" class="btn btn-success" [disabled]="!courseForm.form.valid">Підтвердити</button>
+                    </div>
+                </form>
+                <div class="form-group" align="center" [hidden]="!submitted">
+                    <a class="btn btn-success"  (click)="formReset()"><i class="fa fa-edit m-right-xs"></i>Редагувати</a>
+                </div>
                 <div class="clearfix"></div>
             </div>
         </div>
     </div>
+</div>
+<div class="row">
+
+    <div class="col-md-12" >
+        <div class="x_panel">
+            <div class="x_title">
+            <h2>Comments <small></small></h2>
+            <ul class="nav navbar-right panel_toolbox">
+                <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                </li>
+                <li><a (click)="toggleLastCommentEditMode()"><i class="fa fa-plus"></i></a>
+                </li>
+            </ul>
+
+            <div class="clearfix"></div>
+            </div>
+            <div class="x_content">
+            <div class="container">
+            <div class="row comment" *ngIf="!!editorContent">
+                <div class="col-sm-1">
+                    <div class="thumbnail" style="height: auto;">
+                        <img class="img-responsive user-photo" src="https://ssl.gstatic.com/accounts/ui/avatar_2x.png">
+                    </div>
+                    <!-- /thumbnail -->
+                </div>
+                <!-- /col-sm-1 -->
+                <div class="col-sm-5">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <strong>Author Name</strong> <span class="text-muted">commented a few minutes ago</span>
+                        </div>
+                        <div class="panel-body">
+                            <div class="message" [froalaView]="editorContent"></div>
+                        </div>
+                        <!-- /panel-body -->
+                    </div>
+                    <!-- /panel panel-default -->
+                </div>
+                <!-- /col-sm-5 -->
+            </div>
+            <!-- /row -->
+            </div>
+            <!-- /container -->
+            
+            <div class="col-md-10 col-center" [hidden]="!lastCommentToggle">
+                <div [froalaEditor]="editorConfig" [(froalaModel)]="editorContent"></div>
+                <div class="form-group" align="center" [hidden]="!lastCommentToggle">
+                    <a class="btn btn-success"  (click)="toggleLastCommentEditMode()"><i class="fa fa-edit m-right-xs"></i>Підтвердити</a>
+                </div>   
+            </div>
+            <div class="col-md-2">
+            </div>         
+            </div>
+        </div>
+    </div>
+    <div class="clearfix" style="min-height: 100px;"></div>
 </div>
