--- a/imem/src/forms.css
+++ b/imem/src/forms.css
@@ -1,6 +1,10 @@
-.ng-valid[required], .ng-valid.required  {
+.ng-valid[required], .ng-valid.required {
   border-left: 5px solid #42A948; /* green */
 }
-.ng-invalid:not(form)  {
+.ng-invalid:not(form) {
   border-left: 5px solid #a94442; /* red */
+}
+
+.col-center {
+  float:none; margin: 0 auto;
 }
