change location strategy to hashLocationStratagy

--- a/imem/src/app/dashboard/userdetails.gentelella/userdetails-g.component.html
+++ b/imem/src/app/dashboard/userdetails.gentelella/userdetails-g.component.html
@@ -1,4 +1,4 @@
-<div class="" style="height:800px;">
+<div class="" style="min-height:800px;">
   <div class="page-title">
     <!--<div class="title_left">
       <h3>Головна сторінка учасника порталу</h3>
