--- a/imem/src/app/dashboard/course.component/course.component.html
+++ b/imem/src/app/dashboard/course.component/course.component.html
@@ -41,11 +41,10 @@
     </div>
 </div>
 <div class="row">
-
     <div class="col-md-12" >
         <div class="x_panel">
             <div class="x_title">
-            <h2>Comments <small></small></h2>
+            <h2>Коментарі <small></small></h2>
             <ul class="nav navbar-right panel_toolbox">
                 <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                 </li>
@@ -57,7 +56,7 @@
             </div>
             <div class="x_content">
             <div class="container">
-            <div class="row comment" *ngIf="!!editorContent">
+            <div class="row comment" *ngIf="!!editorContent && !lastCommentToggle">
                 <div class="col-sm-1">
                     <div class="thumbnail" style="height: auto;">
                         <img class="img-responsive user-photo" src="https://ssl.gstatic.com/accounts/ui/avatar_2x.png">
@@ -68,7 +67,7 @@
                 <div class="col-sm-5">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <strong>Author Name</strong> <span class="text-muted">commented a few minutes ago</span>
+                            <strong>Author Name</strong> <span class="text-muted">commented a few seconds ago</span>
                         </div>
                         <div class="panel-body">
                             <div class="message" [froalaView]="editorContent"></div>
@@ -83,6 +82,33 @@
             </div>
             <!-- /container -->
             
+            <div class="col-md-10 col-center" [hidden]="!lastCommentToggle">
+                <div [froalaEditor]="editorConfig" [(froalaModel)]="editorContent"></div>
+                <div class="form-group" align="center" [hidden]="!lastCommentToggle">
+                    <a class="btn btn-success"  (click)="toggleLastCommentEditMode()"><i class="fa fa-edit m-right-xs"></i>Підтвердити</a>
+                </div>   
+            </div>
+            <div class="col-md-2">
+            </div>         
+            </div>
+        </div>
+    </div>
+    <div class="clearfix" style="min-height: 100px;"></div>
+</div>
+<div class="row">
+    <div class="col-md-12" >
+        <div class="x_panel">
+            <div class="x_title">
+            <h2>Студенти <small></small></h2>
+            <ul class="nav navbar-right panel_toolbox">
+                <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                </li>
+            </ul>
+
+            <div class="clearfix"></div>
+            </div>
+            <div class="x_content">
+            <students-table></students-table>
             <div class="col-md-10 col-center" [hidden]="!lastCommentToggle">
                 <div [froalaEditor]="editorConfig" [(froalaModel)]="editorContent"></div>
                 <div class="form-group" align="center" [hidden]="!lastCommentToggle">
