--- a/imem/src/app/dashboard/request-panel/request-panel.component.html
+++ b/imem/src/app/dashboard/request-panel/request-panel.component.html
@@ -3,9 +3,6 @@
 		<h3>Список заявок студентів на курси</h3>
 	</div>
 </div>
-
-<div class="clearfix"></div>
-
 <div class="row">
 	<div class="col-md-12">
 		<div class="x_panel">
@@ -18,40 +15,89 @@
 				<div class="clearfix"></div>
 			</div>
 			<div class="x_content">
-				<!-- start project list -->
-				<table class="table table-striped projects">
-					<thead>
-						<tr>
-							<th style="width: 1%">#</th>
-							<th style="width: 20%">Ім'я</th>
-							<th>Статус</th>
-							<th ></th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr *ngFor='let student of studentRequests; let i = index' [attr.data-index]="i">
-							<td>#{{i}}</td>
-							<td>
-								<a>{{student.Name}}</a>
-								<br />
-								<small>Подано 10.10.2016</small>
-							</td>
-							<td>
-								<span *ngIf= "student.Status == 0" class="label label-default">В очікуванні</span>
-								<span *ngIf = "student.Status == 1" class="label label-default">Прийнято</span>
-								<span *ngIf = "student.Status == 2" class="label label-default">Відмовлено</span>
-							</td>
-							<td>
-								<a class="btn btn-success btn-xs" (click)="acceptItem(i)"><i class="fa fa-check"></i> Прийняти </a>
-								<a class="btn btn-warning btn-xs" (click)="declineItem(i)"><i class="fa fa-pencil"></i> Відмовити </a>
-								<a class="btn btn-danger btn-xs" (click)="removeItem(i)"><i class="fa fa-trash-o"></i> Видалити </a>
-							</td>
-						</tr>
-					</tbody>
-				</table>
-				<!-- end project list -->
-
+			<div class="" role="tabpanel" data-example-id="togglable-tabs">
+				<ul id="myTab" class="nav nav-tabs bar_tabs" role="tablist">
+					<li role="presentation" class="active"><a href="#tab_content1" role="tab" id="profile-tab" data-toggle="tab" aria-expanded="false">Портал</a>
+					</li>
+					<li role="presentation" class=""><a href="#tab_content3" role="tab" id="profile-tab2" data-toggle="tab" aria-expanded="false">Курси</a>
+					</li>
+				</ul>
+				<div id="myTabContent" class="tab-content">
+					<div role="tabpanel" class="tab-pane fade active in" id="tab_content1" aria-labelledby="home-tab">
+						<!-- start project list -->
+						<table class="table table-striped projects">
+							<thead>
+								<tr>
+									<th style="width: 1%">#</th>
+									<th style="width: 20%">Ім'я</th>
+									<th>Статус</th>
+									<th></th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr *ngFor='let student of studentRequests; let i = index' [attr.data-index]="i">
+									<td>#{{i}}</td>
+									<td>
+										<a>{{student.Name}}</a>
+										<br />
+										<small>Подано 10.10.2016</small>
+									</td>
+									<td>
+										<span *ngIf="student.Status == 0" class="label label-default">В очікуванні</span>
+										<span *ngIf="student.Status == 1" class="label label-default">Прийнято</span>
+										<span *ngIf="student.Status == 2" class="label label-default">Відмовлено</span>
+									</td>
+									<td>
+										<a class="btn btn-success btn-xs" (click)="acceptItem(i)"><i class="fa fa-check"></i> Прийняти </a>
+										<a class="btn btn-warning btn-xs" (click)="declineItem(i)"><i class="fa fa-pencil"></i> Відмовити </a>
+										<a class="btn btn-danger btn-xs" (click)="removeItem(i)"><i class="fa fa-trash-o"></i> Видалити </a>
+									</td>
+								</tr>
+							</tbody>
+						</table>
+						<!-- end project list -->
+					</div>
+					<div role="tabpanel" class="tab-pane fade" id="tab_content3" aria-labelledby="profile-tab">
+						<table class="table table-striped projects">
+							<thead>
+								<tr>
+									<th style="width: 1%">#</th>
+									<th style="width: 20%">Ім'я</th>
+									<th style="width: 20%">Курс</th>
+									<th>Статус</th>
+									<th></th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr *ngFor='let student of studentRequests; let i = index' [attr.data-index]="i">
+									<td>#{{i}}</td>
+									<td>
+										<a>{{student.Name}}</a>
+										<br />
+										<small>Подано 10.10.2016</small>
+									</td>
+									<td>
+										<a>Ім'я курсу#</a>
+									</td>
+									<td>
+										<span *ngIf="student.Status == 0" class="label label-default">В очікуванні</span>
+										<span *ngIf="student.Status == 1" class="label label-default">Прийнято</span>
+										<span *ngIf="student.Status == 2" class="label label-default">Відмовлено</span>
+									</td>
+									<td>
+										<a class="btn btn-success btn-xs" (click)="acceptItem(i)"><i class="fa fa-check"></i> Прийняти </a>
+										<a class="btn btn-warning btn-xs" (click)="declineItem(i)"><i class="fa fa-pencil"></i> Відмовити </a>
+										<a class="btn btn-danger btn-xs" (click)="removeItem(i)"><i class="fa fa-trash-o"></i> Видалити </a>
+									</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+			
 			</div>
 		</div>
 	</div>
 </div>
+<div class="clearfix"></div>
