--- a/imem/src/app/dashboard/students.component/students.component.html
+++ b/imem/src/app/dashboard/students.component/students.component.html
@@ -16,84 +16,9 @@
 				<div class="clearfix"></div>
 			</div>
 			<div class="x_content">
-                <ng-table [config]="config"
-                    (tableChanged)="onChangeTable(config)"
-                    (cellClicked)="onCellClick($event)"
-                    [rows]="rows" [columns]="columns">
-                </ng-table>
-                <pagination *ngIf="config.paging"
-                            class="pagination-sm"
-                            [totalItems]="length"
-                            [itemsPerPage]="itemsPerPage"
-                            [maxSize]="maxSize"
-                            [boundaryLinks]="true"
-                            [rotate]="false"
-                            (pageChanged)="onChangeTable(config, $event)"
-                            (numPages)="numPages = $event">
-                </pagination>
-                <pre *ngIf="config.paging" class="card card-block card-header">Page: {{page}} / {{numPages}}</pre>
+                <students-table></students-table>
                 <div class="clearfix"></div>
 			</div>
 		</div>
 	</div>
 </div>
-<!--<div class="row">
-    <data-table id="persons-grid"
-        headerTitle="Студенти учбового порталу ІМЕМ"
-        [items]="students"
-        [itemCount]="itemCount"
-        (reload)="reloadItems($event)"
-        
-        (rowClick)="rowClick($event)"
-        (rowDoubleClick)="rowDoubleClick($event)"
-        [rowTooltip]="rowTooltip"
-        >
-        <data-table-column
-            [property]="'FirstName'"
-            [header]="'Ім\'я'"
-            [sortable]="true"
-            [resizable]="true">
-        </data-table-column>
-        <data-table-column
-            [property]="'LastName'"
-            [header]="'Прізвище'"
-            [sortable]="true"
-            [resizable]="true">
-        </data-table-column>
-        <data-table-column
-            [property]="'StudentStatus'"
-            [header]="'Статус'"
-            [sortable]="true"
-            [resizable]="true">
-            <template #dataTableCell let-item="item">
-                <span>{{transforStudentStatus(item.StudentStatus)}}</span>
-            </template>
-        </data-table-column>
-        <data-table-column
-            [property]="'Faculty'"
-            [header]="'Факультет'"
-            [sortable]="true"
-            [resizable]="true">
-        </data-table-column>
-        <data-table-column
-            [property]="'Course'"
-            [header]="'Курс(номер)'"
-            [sortable]="true"
-            [resizable]="true">
-        </data-table-column>
-        <data-table-column
-            [property]="'Group'"
-            [header]="'Група'"
-            [sortable]="true"
-            [resizable]="true">
-        </data-table-column>
-        <data-table-column
-            [property]="'Department'"
-            [header]="'Кафедра'"
-            [sortable]="true"
-            [resizable]="true">
-        </data-table-column>
-
-    </data-table>
-</div>
-<div class="clearfix"></div>-->
