lecture component init ; lecture table

--- a/imem/src/app/app.component.html
+++ b/imem/src/app/app.component.html
@@ -1,4 +1,4 @@
-<router-outlet></router-outlet>
+<router-outlet  (deactivate)="onDeactivate()"></router-outlet>
   <!--<body class="nav-md">
     <div class="container body">
       <div class="main_container">
