--- a/imem/src/app/dashboard/course.component/course.component.html
+++ b/imem/src/app/dashboard/course.component/course.component.html
@@ -44,52 +44,15 @@
     <div class="col-md-12" >
         <div class="x_panel">
             <div class="x_title">
-            <h2>Коментарі <small></small></h2>
+            <h2>Лекції <small></small></h2>
             <ul class="nav navbar-right panel_toolbox">
-                <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                </li>
-                <li><a (click)="toggleLastCommentEditMode()"><i class="fa fa-plus"></i></a>
+                <li><a class="collapse-link"><i class="fa fa-chevron-down"></i></a>
                 </li>
             </ul>
-
             <div class="clearfix"></div>
             </div>
             <div class="x_content">
-            <div class="container">
-            <div class="row comment" *ngIf="!!editorContent && !lastCommentToggle">
-                <div class="col-sm-1">
-                    <div class="thumbnail" style="height: auto;">
-                        <img class="img-responsive user-photo" src="https://ssl.gstatic.com/accounts/ui/avatar_2x.png">
-                    </div>
-                    <!-- /thumbnail -->
-                </div>
-                <!-- /col-sm-1 -->
-                <div class="col-sm-5">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <strong>Author Name</strong> <span class="text-muted">commented a few seconds ago</span>
-                        </div>
-                        <div class="panel-body">
-                            <div class="message" [froalaView]="editorContent"></div>
-                        </div>
-                        <!-- /panel-body -->
-                    </div>
-                    <!-- /panel panel-default -->
-                </div>
-                <!-- /col-sm-5 -->
-            </div>
-            <!-- /row -->
-            </div>
-            <!-- /container -->
-            
-            <div class="col-md-10 col-center" [hidden]="!lastCommentToggle">
-                <div [froalaEditor]="editorConfig" [(froalaModel)]="editorContent"></div>
-                <div class="form-group" align="center" [hidden]="!lastCommentToggle">
-                    <a class="btn btn-success"  (click)="toggleLastCommentEditMode()"><i class="fa fa-edit m-right-xs"></i>Підтвердити</a>
-                </div>   
-            </div>
-            <div class="col-md-2">
-            </div>         
+            <lectures-table></lectures-table>
             </div>
         </div>
     </div>
@@ -97,7 +60,7 @@
 </div>
 <div class="row">
     <div class="col-md-12" >
-        <div class="x_panel">
+        <div class="x_panel collapsed">
             <div class="x_title">
             <h2>Студенти <small></small></h2>
             <ul class="nav navbar-right panel_toolbox">
