--- a/imem/src/app/dashboard/lecture.component/lecture.component.html
+++ b/imem/src/app/dashboard/lecture.component/lecture.component.html
@@ -1,94 +1,95 @@
-<!--<div class="x_panel">
-    <div class="col-md-12 center-margin">
-        <fieldset disabled>
-            <form class="form-horizontal form-label-left">
-                <div class="form-group">
-                    <label class="control-label col-md-3">Назва Лекції</label>
-                    <div class="col-md-7">
-                        <input type="text" id="first-name2" value="Практикум" class="form-control col-md-7 col-xs-12">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label col-md-3" for="last-name">Опис
-                    </label>
-                    <div class="col-md-7">
-                        <textarea style="height:200px;" class="resizable_textarea form-control" placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                    ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                    nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."></textarea>
-                    </div>
-                    </div>
-                    </form>
-                    </fieldset>
+<div class="page-title">
+    <div class="title_left">
+        <h3>Загальна інформація про лекцію</h3>
     </div>
-     <div class="x_content">
-                  <div id="alerts"></div>
-                  <div class="btn-toolbar editor" data-role="editor-toolbar" data-target="#editor">
-                    <div class="btn-group">
-                      <a class="btn dropdown-toggle" data-toggle="dropdown" title="Font"><i class="fa fa-font"></i><b class="caret"></b></a>
-                      <ul class="dropdown-menu">
-                      </ul>
+</div>
+<div class="clearfix"></div>
+<div class="row">
+    <div class="col-md-12">
+        <div class="x_panel">
+            <div class="x_title">
+                <h2>Лекція [NAME]</h2>
+                <ul class="nav navbar-right panel_toolbox">
+                    <li><a class="" (click)="navigateToParent()"><i class="fa fa-reply-all"></i><b> Назад</b></a>
+                    </li>
+                </ul>
+                <div class="clearfix"></div>
+            </div>
+            <div class="x_content">
+                <form class="form-horizontal form-label-left"  #courseForm="ngForm" (ngSubmit)="onSubmit()">
+                    <div class="form-group">
+                        <label>Назва</label>
+                        <input class="form-control" value="Базова Лекція" required [readonly]="submitted">
                     </div>
-
-                    <div class="btn-group">
-                      <a class="btn dropdown-toggle" data-toggle="dropdown" title="Font Size"><i class="fa fa-text-height"></i>&nbsp;<b class="caret"></b></a>
-                      <ul class="dropdown-menu">
-                        <li>
-                          <a data-edit="fontSize 5">
-                            <p style="font-size:17px">Huge</p>
-                          </a>
-                        </li>
-                        <li>
-                          <a data-edit="fontSize 3">
-                            <p style="font-size:14px">Normal</p>
-                          </a>
-                        </li>
-                        <li>
-                          <a data-edit="fontSize 1">
-                            <p style="font-size:11px">Small</p>
-                          </a>
-                        </li>
-                      </ul>
+                    <div class="form-group">
+                        <label>Опис</label>
+                        <textarea style="height:200px;"
+                            class="resizable_textarea form-control"
+                            [readonly]="submitted"
+                            placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."></textarea>
                     </div>
-
-                    <div class="btn-group">
-                      <a class="btn" data-edit="bold" title="Bold (Ctrl/Cmd+B)"><i class="fa fa-bold"></i></a>
-                      <a class="btn" data-edit="italic" title="Italic (Ctrl/Cmd+I)"><i class="fa fa-italic"></i></a>
-                      <a class="btn" data-edit="strikethrough" title="Strikethrough"><i class="fa fa-strikethrough"></i></a>
-                      <a class="btn" data-edit="underline" title="Underline (Ctrl/Cmd+U)"><i class="fa fa-underline"></i></a>
+                    <div class="form-group" align="center"  [hidden]="submitted">
+                        <button type="submit" class="btn btn-success" [disabled]="!courseForm.form.valid">Підтвердити</button>
                     </div>
-
-                    <div class="btn-group">
-                      <a class="btn" data-edit="insertunorderedlist" title="Bullet list"><i class="fa fa-list-ul"></i></a>
-                      <a class="btn" data-edit="insertorderedlist" title="Number list"><i class="fa fa-list-ol"></i></a>
-                      <a class="btn" data-edit="outdent" title="Reduce indent (Shift+Tab)"><i class="fa fa-dedent"></i></a>
-                      <a class="btn" data-edit="indent" title="Indent (Tab)"><i class="fa fa-indent"></i></a>
-                    </div>
-
-                    <div class="btn-group">
-                      <a class="btn" data-edit="justifyleft" title="Align Left (Ctrl/Cmd+L)"><i class="fa fa-align-left"></i></a>
-                      <a class="btn" data-edit="justifycenter" title="Center (Ctrl/Cmd+E)"><i class="fa fa-align-center"></i></a>
-                      <a class="btn" data-edit="justifyright" title="Align Right (Ctrl/Cmd+R)"><i class="fa fa-align-right"></i></a>
-                      <a class="btn" data-edit="justifyfull" title="Justify (Ctrl/Cmd+J)"><i class="fa fa-align-justify"></i></a>
-                    </div>
-
-                    <div class="btn-group">
-                      <a class="btn dropdown-toggle" data-toggle="dropdown" title="Hyperlink"><i class="fa fa-link"></i></a>
-                      <div class="dropdown-menu input-append">
-                        <input class="span2" placeholder="URL" type="text" data-edit="createLink" />
-                        <button class="btn" type="button">Add</button>
-                      </div>
-                      <a class="btn" data-edit="unlink" title="Remove Hyperlink"><i class="fa fa-cut"></i></a>
-                    </div>
-                  </div>
-
-                  <div id="editor" class="editor-wrapper"></div>
-
-                  <textarea name="descr" id="descr" style="display:none;"></textarea>
-                  
-                  <br />
-
-                  <div class="ln_solid"></div>
+                </form>
+                <div class="form-group" align="center" [hidden]="!submitted">
+                    <a class="btn btn-success"  (click)="formReset()"><i class="fa fa-edit m-right-xs"></i>Редагувати</a>
                 </div>
-               
-</div>-->
+                <div class="clearfix"></div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12" >
+        <div class="x_panel">
+            <div class="x_title">
+            <h2>Коментарі <small></small></h2>
+            <ul class="nav navbar-right panel_toolbox">
+                <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                </li>
+                <li><a (click)="toggleLastCommentEditMode()"><i class="fa fa-plus"></i></a>
+                </li>
+            </ul>
+
+            <div class="clearfix"></div>
+            </div>
+            <div class="x_content">
+            <div class="container">
+            <div class="row comment" *ngIf="!!editorContent && !lastCommentToggle">
+                <div class="col-sm-1">
+                    <div class="thumbnail" style="height: auto;">
+                        <img class="img-responsive user-photo" src="https://ssl.gstatic.com/accounts/ui/avatar_2x.png">
+                    </div>
+                    <!-- /thumbnail -->
+                </div>
+                <!-- /col-sm-1 -->
+                <div class="col-sm-5">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <strong>Author Name</strong> <span class="text-muted">commented a few seconds ago</span>
+                        </div>
+                        <div class="panel-body">
+                            <div class="message" [froalaView]="editorContent"></div>
+                        </div>
+                        <!-- /panel-body -->
+                    </div>
+                    <!-- /panel panel-default -->
+                </div>
+                <!-- /col-sm-5 -->
+            </div>
+            <!-- /row -->
+            </div>
+            <!-- /container -->
+            
+            <div class="col-md-10 col-center" [hidden]="!lastCommentToggle">
+                <div [froalaEditor]="editorConfig" [(froalaModel)]="editorContent"></div>
+                <div class="form-group" align="center" [hidden]="!lastCommentToggle">
+                    <a class="btn btn-success"  (click)="toggleLastCommentEditMode()"><i class="fa fa-edit m-right-xs"></i>Підтвердити</a>
+                </div>   
+            </div>
+            </div>
+        </div>
+    </div>
+    <div class="clearfix" style="min-height: 100px;"></div>
+</div>
