--- a/imem/src/app/dashboard/student.component/student.component.html
+++ b/imem/src/app/dashboard/student.component/student.component.html
@@ -16,9 +16,142 @@
 				<div class="clearfix"></div>
 			</div>
 			<div class="x_content">
-				<div class="div">STUDENT DETAILS{{id}}</div>
-				<div class="clearfix"></div>
+				<div class="row">
+					<div class="col-md-3">
+						<div class="profile_img">
+						<div id="crop-avatar">
+							<!-- Current avatar -->
+							<img class="img-responsive avatar-view" src="http://lorempixel.com/g/200/200/" alt="Avatar" title="Change the avatar">
+						</div>
+						</div>
+					</div>
+					<div class="col-md-9">
+						<form class="form-horizontal form-label-left" #userForm="ngForm" (ngSubmit)="onSubmit()">
+						<div class="form-group">
+							<label class="control-label col-md-3 col-sm-3 col-xs-12">Ім'я</label>
+							<div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback">
+							<input type="text" id="first-name" required [(ngModel)]="modelUser.FirstName" name="FirstName" value="Студент" [readonly]="submitted"
+								class="form-control col-md-7 col-xs-12" #firstname="ngModel">
+								<span class="fa fa-user form-control-feedback right" aria-hidden="true"></span>
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-md-3 col-sm-3 col-xs-12">Прізвище</label>
+							<div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback">
+							<input type="text" id="last-name" required [(ngModel)]="modelUser.LastName" name="LastName" [readonly]="submitted" class="form-control col-md-7 col-xs-12"
+								#lastname="ngModel">
+								<span class="fa fa-user form-control-feedback right" aria-hidden="true"></span>
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-md-3 col-sm-3 col-xs-12">Телефон</label>
+							<div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback">
+								<input type="text" id="phone" [(ngModel)]="modelUser.Phone" name="Phone" [readonly]="submitted" class="form-control has-feedback"
+								#phone="ngModel">
+								<span class="fa fa-phone form-control-feedback right" aria-hidden="true"></span>
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">Пошта</label>
+							<div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback">
+								<input type="text" [(ngModel)]="modelUser.Email" name="Email" [readonly]="submitted" class="form-control has-feedback"
+								#email="ngModel">
+								<span class="fa fa-envelope form-control-feedback right" aria-hidden="true"></span>
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">Факультет</label>
+							<div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback">
+								<input type="text" [(ngModel)]="modelUser.Faculty" name="Faculty" [readonly]="submitted" class="form-control has-feedback"
+								#email="ngModel">
+								<span class="fa fa-group form-control-feedback right" aria-hidden="true"></span>
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-md-3 col-sm-3 col-xs-12">Стать</label>
+							<div class="col-md-6 col-sm-6 col-xs-12">
+							<div id="gender" class="btn-group" data-toggle="buttons">
+								<label class="btn" (click)="sexListToggle(0)" [ngClass]="{'btn-primary': sexList[0],'btn-default': !sexList[0]}">
+									<input type="radio" 
+										name="gender" 
+										value="male"> &nbsp; Чоловiк &nbsp;
+								</label>
+								<label class="btn" (click)="sexListToggle(1)" [ngClass]="{'btn-primary': sexList[1],'btn-default': !sexList[1]}">
+									<input type="radio" 
+									name="gender"
+									value="female"> Жінка
+								</label>
+							</div>
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">День Народження</label>
+							<div class="col-md-6 col-sm-6 col-xs-12">
+							<!--<input type="text" id="birthday" [(ngModel)]="modelUser.Birthday" name="Birthday" [readonly]="submitted" class="form-control col-md-7 col-xs-12"
+								>-->
+							<ng2-datepicker [options]="datepickerOption" [(ngModel)]="datepickerModel"
+								name="Birthday" required
+								></ng2-datepicker>
+							<!--<div class="col-xs-6" [hidden]="firstname.valid || firstname.pristine" class="alert alert-danger">
+									Обов'язкове поле
+								</div>-->
+							</div>
+						</div>
+						<div class="form-group" align="center" [hidden]="!submitted">
+							<a class="btn btn-success" (click)="formReset()"><i class="fa fa-edit m-right-xs"></i>Редагувати Профіль</a>
+						</div>
+						<div class="form-group" align="center" [hidden]="submitted">
+							<button type="submit" class="btn btn-success" [disabled]="!userForm.form.valid">Підтвердити</button>
+						</div>
+						<div class="ln_solid"></div>
+						</form>
+
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
+</div>
+<div class="row">
+    <div class="col-md-12" >
+        <div class="x_panel">
+            <div class="x_title">
+            <h2>Статистика <small></small></h2>
+            <ul class="nav navbar-right panel_toolbox">
+                <li><a class="collapse-link"><i class="fa fa-chevron-down"></i></a>
+                </li>
+            </ul>
+            <div class="clearfix"></div>
+            </div>
+            <div class="x_content">
+				<!--<div style="display: block">
+				<canvas baseChart
+							[data]="doughnutChartData"
+							[labels]="doughnutChartLabels"
+							[chartType]="doughnutChartType"
+							(chartHover)="chartHovered($event)"
+							(chartClick)="chartClicked($event)"></canvas>
+				</div>-->
+            </div>
+        </div>
+    </div>
+    <div class="clearfix" style="min-height: 100px;"></div>
+</div>
+<div class="row">
+    <div class="col-md-12" >
+        <div class="x_panel">
+            <div class="x_title">
+            <h2>Курси <small></small></h2>
+            <ul class="nav navbar-right panel_toolbox">
+                <li><a class="collapse-link"><i class="fa fa-chevron-down"></i></a>
+                </li>
+            </ul>
+            <div class="clearfix"></div>
+            </div>
+            <div class="x_content">
+            <courses-table></courses-table>
+            </div>
+        </div>
+    </div>
+    <div class="clearfix" style="min-height: 100px;"></div>
 </div>
