edit student layout v0.1

--- a/imem/src/app/dashboard/course.component/course.component.html
+++ b/imem/src/app/dashboard/course.component/course.component.html
@@ -12,6 +12,8 @@
                 <ul class="nav navbar-right panel_toolbox">
                     <li><a class="" (click)="navigateToParent()"><i class="fa fa-reply-all"></i><b> Назад</b></a>
                     </li>
+                    <li><a class="" (click)="openModalClose()"><i class="fa fa-remove"></i></a>
+                    </li>
                 </ul>
                 <div class="clearfix"></div>
             </div>
