--- a/imem/src/app/login/login.component.html
+++ b/imem/src/app/login/login.component.html
@@ -37,6 +37,10 @@
 						<div>
 							<div class="btn btn-default submit" (click)="login(1)" id="googleBtn">student</div>
 							<div class="btn btn-default submit" (click)="login(2)" id="googleBtn">admin</div>
+							<div class="btn btn-default submit" id="googleBtn">
+								<a href="auth/login">/auth/login</a>
+							</div>
+							
 							<!--<a class="btn btn-default submit" (click)="login()" routerLink="" tabindex="3">Увійти</a>-->
 							<!--<a class="reset_pass" routerLink="/restorepassword" tabindex="4">Забув пароль?</a>-->
 						</div>
