--- a/imem/src/styles.css
+++ b/imem/src/styles.css
@@ -48,7 +48,7 @@
 .nav-sm .container.body .col-md-3.left_col {
   width: 70px;
   padding: 0;
-  z-index: 9999;
+  z-index: 1000;
   position: absolute; }
 
 .nav-sm .container.body .col-md-3.left_col.menu_fixed {
@@ -235,7 +235,7 @@
   position: absolute;
   display: -ms-flexbox;
   display: flex;
-  z-index: 9999; }
+  z-index: 1000; }
 
 .nav-md .container.body .col-md-3.left_col.menu_fixed {
   height: 100%;
@@ -1832,8 +1832,9 @@ a.star {
   width: 100%; }
 
 .buttons, button, .btn {
-  margin-bottom: 5px;
-  margin-right: 5px; }
+  /*margin-bottom: 5px;
+  margin-right: 5px; */
+  }
 
 .btn-group-vertical .btn, .btn-group .btn {
   margin-bottom: 0;
@@ -1928,7 +1929,7 @@ a.star {
   border-right: 0;
   border-bottom: 0;
   border-top-left-radius: 5px;
-  z-index: 9999;
+  z-index: 1000;
   display: none; }
 
 .compose .compose-header {
