--- a/imem/src/app/dashboard/sidebar.gentelella/sidebar-g.component.html
+++ b/imem/src/app/dashboard/sidebar.gentelella/sidebar-g.component.html
@@ -1,7 +1,7 @@
         <div class="col-md-3 left_col menu_fixed">
           <div class="left_col scroll-view">
             <div class="navbar nav_title" style="border: 0;">
-              <a routerLink='/' class="site_title"><i class="fa fa-sitemap" ></i> <span>Портал ІМЕМ</span></a>
+              <a routerLink='/dashboard' class="site_title"><i class="fa fa-sitemap" ></i> <span>Портал ІМЕМ</span></a>
             </div>
 
             <div class="clearfix"></div>
