add comment section component

--- a/imem/src/app/dashboard/sidebar.gentelella/sidebar-g.component.html
+++ b/imem/src/app/dashboard/sidebar.gentelella/sidebar-g.component.html
@@ -24,12 +24,12 @@
               <div class="menu_section">
                 <!--<h3>General</h3>-->
                 <ul class="nav side-menu">
-                  <li><a routerLink="/dashboard"><i class="fa fa-home"></i> Головна Сторінка <span class="fa fa-chevron-right"></span></a>
+                  <li><a routerLink="/dashboard"><i class="fa fa-home"></i> Головна <span class="fa fa-chevron-right"></span></a>
                     <!--<ul class="nav child_menu">
                       <li><a href="#">Option1</a></li>
                     </ul>-->
                   </li>
-                  <li><a routerLink="/dashboard/courses"><i class="fa fa-book"></i> Навчальні Курси <span class="fa fa-chevron-right"></span></a>
+                  <li><a routerLink="/dashboard/courses"><i class="fa fa-book"></i> Навчальні курси <span class="fa fa-chevron-right"></span></a>
                     <!--<ul class="nav child_menu">
                       <li><a href="#">Course1</a></li>
                       <li><a href="#">Course2</a></li>
