--- a/imem/src/app/dashboard/lecture.component/lecture.component.html
+++ b/imem/src/app/dashboard/lecture.component/lecture.component.html
@@ -40,7 +40,7 @@
         </div>
     </div>
 </div>
-<div class="row">
+<div class="row" id="comment-section" tabindex="0">
     <div class="col-md-12" >
         <div class="x_panel">
             <div class="x_title">
@@ -48,48 +48,16 @@
             <ul class="nav navbar-right panel_toolbox">
                 <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                 </li>
-                <li><a (click)="toggleLastCommentEditMode()"><i class="fa fa-plus"></i></a>
+                <li><a (click)="commentSection.toggleCommentSection()"><i class="fa fa-plus"></i></a>
                 </li>
             </ul>
 
             <div class="clearfix"></div>
             </div>
             <div class="x_content">
-            <div class="container">
-            <div class="row comment" *ngIf="!!editorContent && !lastCommentToggle">
-                <div class="col-sm-1">
-                    <div class="thumbnail" style="height: auto;">
-                        <img class="img-responsive user-photo" src="https://ssl.gstatic.com/accounts/ui/avatar_2x.png">
-                    </div>
-                    <!-- /thumbnail -->
-                </div>
-                <!-- /col-sm-1 -->
-                <div class="col-sm-5">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <strong>Author Name</strong> <span class="text-muted">commented a few seconds ago</span>
-                        </div>
-                        <div class="panel-body">
-                            <div class="message" [froalaView]="editorContent"></div>
-                        </div>
-                        <!-- /panel-body -->
-                    </div>
-                    <!-- /panel panel-default -->
-                </div>
-                <!-- /col-sm-5 -->
-            </div>
-            <!-- /row -->
-            </div>
-            <!-- /container -->
-            
-            <div class="col-md-10 col-center" [hidden]="!lastCommentToggle">
-                <div [froalaEditor]="editorConfig" [(froalaModel)]="editorContent"></div>
-                <div class="form-group" align="center" [hidden]="!lastCommentToggle">
-                    <a class="btn btn-success"  (click)="toggleLastCommentEditMode()"><i class="fa fa-edit m-right-xs"></i>Підтвердити</a>
-                </div>   
-            </div>
+                <comment-section #commentSection></comment-section>
+                <div class="clearfix" style="min-height: 100px;"></div>
             </div>
         </div>
     </div>
-    <div class="clearfix" style="min-height: 100px;"></div>
 </div>
