--- a/imem/src/app/dashboard/topnav.gentelella/topnav-g.component.html
+++ b/imem/src/app/dashboard/topnav.gentelella/topnav-g.component.html
@@ -9,7 +9,7 @@
               <ul class="nav navbar-nav navbar-right">
                 <li class="">
                   <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                    <i style="font-size:24pt;" class="fa fa-user" aria-hidden="true"></i> {{_authService.getUserName()}}
+                    <i style="font-size:24pt;" class="fa fa-user" aria-hidden="true"></i> {{_authService.getUserName().given_name+' '+_authService.getUserName().family_name}} 
                     <span class=" fa fa-angle-down" style="padding-left:5px;"></span>
                   </a>
                   <ul class="dropdown-menu dropdown-usermenu pull-right">
