--- a/imem/src/app/login/auth-callback/auth-callback.component.html
+++ b/imem/src/app/login/auth-callback/auth-callback.component.html
@@ -1,6 +1,5 @@
-<div class="container body">
+<!--<div class="container body">
     <div class="main_container">
-        <!-- page content -->
         <div class="col-md-12">
             <div class="col-middle">
                 <div class="text-center text-center">
@@ -8,6 +7,5 @@
                 </div>
             </div>
         </div>
-        <!-- /page content -->
     </div>
-</div>
+</div>-->
