--- a/imem/src/app/dashboard/topnav.gentelella/topnav-g.component.html
+++ b/imem/src/app/dashboard/topnav.gentelella/topnav-g.component.html
@@ -21,7 +21,7 @@
                       </a>
                     </li>
                     <li><a href="javascript:;">Довідка</a></li>
-                    <li><a (click)="logout()" routerLink="/login"><i class="fa fa-sign-out pull-right"></i>Вийти</a></li>
+                    <li><a (click)="logout()"><i class="fa fa-sign-out pull-right"></i>Вийти</a></li>
                   </ul>
                 </li>
 
