--- a/imem/src/app/dashboard/userdetails.gentelella/userdetails-g.component.html
+++ b/imem/src/app/dashboard/userdetails.gentelella/userdetails-g.component.html
@@ -3,139 +3,133 @@
     <!--<div class="title_left">
       <h3>Головна сторінка учасника порталу</h3>
     </div>-->
-    </div>
-      <div class="row">
-        <div class="col-md-12 col-sm-12 col-xs-12">
-          <div class="x_panel">
-            <div class="x_title">
-              <h2>Головна сторінка учасника порталу</h2>
-              <div class="clearfix"></div>
-            </div>
-            <div class="x_content">
-              <div class="col-md-3 col-sm-3 col-xs-12 profile_left">
-                <div class="profile_img">
-                  <div id="crop-avatar">
-                    <!-- Current avatar -->
-                    <img class="img-responsive avatar-view" [src]="_authService.getUserPicture()" alt="Avatar" title="Change the avatar">
-                  </div>
-                </div>
-                <!--<h3>{{_authService.sessionUser.email}}</h3>-->
-                <ul class="list-unstyled user_data">
-                  <li *ngIf="!_authService.isAdminSession()"><i class="fa fa-user user-profile-icon"></i> Студент
-                    <li *ngIf="_authService.isAdminSession()"><i class="fa fa-user user-profile-icon"></i> Адміністратор
-                    </li>
-                    <li class="m-top-xs">
-                      <i class="fa fa-external-link fa-envelope"></i>
-                      <a href="#" target="_blank">{{_authService.getUserEmail()}}</a>
-                    </li>
-                </ul>
-
-                <a class="btn btn-success" (click)="formReset()"><i class="fa fa-edit m-right-xs"></i>Редагувати Профіль</a>
-                <br/>
+  </div>
+  <div class="row">
+    <div class="col-md-12 col-sm-12 col-xs-12">
+      <div class="x_panel">
+        <div class="x_title">
+          <h2>Головна сторінка учасника порталу</h2>
+          <div class="clearfix"></div>
+        </div>
+        <div class="x_content">
+          <div class="col-md-3 col-sm-3 col-xs-12 profile_left">
+            <div class="profile_img">
+              <div id="crop-avatar">
+                <!-- Current avatar -->
+                <img class="img-responsive avatar-view" [src]="_authService.getUserPicture()" alt="Avatar" title="Change the avatar">
               </div>
-              <div class="col-md-9 col-sm-9 col-xs-12">
-                <div class="" role="tabpanel" data-example-id="togglable-tabs">
-                  <ul id="myTab" class="nav nav-tabs bar_tabs" role="tablist">
-                    <li role="presentation" class="active"><a href="#tab_content1" role="tab" id="profile-tab" data-toggle="tab" aria-expanded="false">Анкетні Дані</a>
-                    </li>
-                    <li *ngIf="!_authService.isAdminSession()" role="presentation" class=""><a href="#tab_content3" role="tab" id="profile-tab2" data-toggle="tab" aria-expanded="false">Курси</a>
-                    </li>
-                  </ul>
-                  <div id="myTabContent" class="tab-content">
-                    <div role="tabpanel" class="tab-pane fade active in" id="tab_content1" aria-labelledby="home-tab">
-                      <div class="row">
-                        <div class="col-md-12 col-sm-12 col-xs-12">
-                          <div class="x_panel">
-                            <div class="x_title">
-                              <h2>Загальні Відомості</h2>
-                              <div class="clearfix"></div>
-                            </div>
-                            <div class="x_content">
-                              <br />
-                              <form class="form-horizontal form-label-left" #userForm="ngForm" (ngSubmit)="onSubmit()">
+            </div>
+            <!--<h3>{{_authService.sessionUser.email}}</h3>-->
+            <ul class="list-unstyled user_data">
+              <li><i class="fa fa-user user-profile-icon"></i> {{_authService.getUserRoleLocal()}}</li>
+              <li class="m-top-xs">
+                <i class="fa fa-external-link fa-envelope"></i>
+                <a href="#" target="_blank">{{_authService.getUserEmail()}}</a>
+              </li>
+            </ul>
 
-                                <div class="form-group">
-                                  <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">Ім'я</label>
-                                  <div class="col-md-6 col-sm-6 col-xs-12">
-                                    <input type="text" id="first-name" required [(ngModel)]="modelUser.FirstName" name="FirstName" value="Студент" [readonly]="submitted"
-                                      class="form-control col-md-7 col-xs-12" #firstname="ngModel">
-                                    <!--<div class="col-xs-6" [hidden]="firstname.valid || firstname.pristine" class="alert alert-danger">
+            <a class="btn btn-success" (click)="formReset()"><i class="fa fa-edit m-right-xs"></i>Редагувати Профіль</a>
+            <br/>
+          </div>
+          <div class="col-md-9 col-sm-9 col-xs-12">
+            <div class="" role="tabpanel" data-example-id="togglable-tabs">
+              <ul id="myTab" class="nav nav-tabs bar_tabs" role="tablist">
+                <li role="presentation" class="active"><a href="#tab_content1" role="tab" id="profile-tab" data-toggle="tab" aria-expanded="false">Анкетні Дані</a>
+                </li>
+                <li *appAppLayout="'userdetails.courseTab'" role="presentation" class=""><a href="#tab_content3" role="tab" id="profile-tab2" data-toggle="tab" aria-expanded="false">Курси</a>
+                </li>
+              </ul>
+              <div id="myTabContent" class="tab-content">
+                <div role="tabpanel" class="tab-pane fade active in" id="tab_content1" aria-labelledby="home-tab">
+                  <div class="row">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                      <div class="x_panel">
+                        <div class="x_title">
+                          <h2>Загальні Відомості</h2>
+                          <div class="clearfix"></div>
+                        </div>
+                        <div class="x_content">
+                          <br />
+                          <form class="form-horizontal form-label-left" #userForm="ngForm" (ngSubmit)="onSubmit()">
+
+                            <div class="form-group">
+                              <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">Ім'я</label>
+                              <div class="col-md-6 col-sm-6 col-xs-12">
+                                <input type="text" id="first-name" required [(ngModel)]="modelUser.FirstName" name="FirstName" value="Студент" [readonly]="submitted"
+                                  class="form-control col-md-7 col-xs-12" #firstname="ngModel">
+                                <!--<div class="col-xs-6" [hidden]="firstname.valid || firstname.pristine" class="alert alert-danger">
                                           Обов'язкове поле
                                       </div>-->
-                                  </div>
-                                </div>
-                                <div class="form-group">
-                                  <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">Прізвище</label>
-                                  <div class="col-md-6 col-sm-6 col-xs-12">
-                                    <input type="text" id="last-name" required [(ngModel)]="modelUser.LastName" name="LastName" [readonly]="submitted" class="form-control col-md-7 col-xs-12"
-                                      #lastname="ngModel">
-                                    <!--<div class="col-xs-6" [hidden]="firstname.valid || firstname.pristine" class="alert alert-danger">
+                              </div>
+                            </div>
+                            <div class="form-group">
+                              <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">Прізвище</label>
+                              <div class="col-md-6 col-sm-6 col-xs-12">
+                                <input type="text" id="last-name" required [(ngModel)]="modelUser.LastName" name="LastName" [readonly]="submitted" class="form-control col-md-7 col-xs-12"
+                                  #lastname="ngModel">
+                                <!--<div class="col-xs-6" [hidden]="firstname.valid || firstname.pristine" class="alert alert-danger">
                                           Обов'язкове поле
                                       </div>-->
-                                  </div>
-                                </div>
-                                <div class="form-group">
-                                  <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">Телефон</label>
-                                  <div class="col-md-6 col-sm-6 col-xs-12">
-                                    <input type="text" id="phone" [(ngModel)]="modelUser.Phone" name="Phone" [readonly]="submitted" class="form-control col-md-7 col-xs-12"
-                                      #phone="ngModel">
-                                    <!--<div class="col-xs-6" [hidden]="firstname.valid || firstname.pristine" class="alert alert-danger">
+                              </div>
+                            </div>
+                            <div class="form-group">
+                              <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">Телефон</label>
+                              <div class="col-md-6 col-sm-6 col-xs-12">
+                                <input type="text" id="phone" [(ngModel)]="modelUser.Phone" name="Phone" [readonly]="submitted" class="form-control col-md-7 col-xs-12"
+                                  #phone="ngModel">
+                                <!--<div class="col-xs-6" [hidden]="firstname.valid || firstname.pristine" class="alert alert-danger">
                                           Обов'язкове поле
                                       </div>-->
-                                  </div>
-                                </div>
-                                <div class="form-group">
-                                  <label class="control-label col-md-3 col-sm-3 col-xs-12">Стать</label>
-                                  <div class="col-md-6 col-sm-6 col-xs-12">
-                                    <div id="gender" class="btn-group" data-toggle="buttons">
-                                      <label class="btn" (click)="sexListToggle(0)" [ngClass]="{'btn-primary': sexList[0],'btn-default': !sexList[0]}">
+                              </div>
+                            </div>
+                            <div class="form-group">
+                              <label class="control-label col-md-3 col-sm-3 col-xs-12">Стать</label>
+                              <div class="col-md-6 col-sm-6 col-xs-12">
+                                <div id="gender" class="btn-group" data-toggle="buttons">
+                                  <label class="btn" (click)="sexListToggle(0)" [ngClass]="{'btn-primary': sexList[0],'btn-default': !sexList[0]}">
                                           <input type="radio" 
                                               name="gender" 
                                               value="male"> &nbsp; Чоловiк &nbsp;
                                         </label>
-                                      <label class="btn" (click)="sexListToggle(1)" [ngClass]="{'btn-primary': sexList[1],'btn-default': !sexList[1]}">
+                                  <label class="btn" (click)="sexListToggle(1)" [ngClass]="{'btn-primary': sexList[1],'btn-default': !sexList[1]}">
                                          <input type="radio" 
                                             name="gender"
                                             value="female"> Жінка
                                         </label>
-                                    </div>
-                                  </div>
                                 </div>
-                                <div class="form-group">
-                                  <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">День Народження</label>
-                                  <div class="col-md-6 col-sm-6 col-xs-12">
-                                    <!--<input type="text" id="birthday" [(ngModel)]="modelUser.Birthday" name="Birthday" [readonly]="submitted" class="form-control col-md-7 col-xs-12"
+                              </div>
+                            </div>
+                            <div class="form-group">
+                              <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">День Народження</label>
+                              <div class="col-md-6 col-sm-6 col-xs-12">
+                                <!--<input type="text" id="birthday" [(ngModel)]="modelUser.Birthday" name="Birthday" [readonly]="submitted" class="form-control col-md-7 col-xs-12"
                                       >-->
-                                    <ng2-datepicker [options]="datepickerOption" [(ngModel)]="datepickerModel"
-                                       name="Birthday" required
-                                       ></ng2-datepicker>
-                                    <!--<div class="col-xs-6" [hidden]="firstname.valid || firstname.pristine" class="alert alert-danger">
+                                <ng2-datepicker [options]="datepickerOption" [(ngModel)]="datepickerModel" name="Birthday" required></ng2-datepicker>
+                                <!--<div class="col-xs-6" [hidden]="firstname.valid || firstname.pristine" class="alert alert-danger">
                                           Обов'язкове поле
                                       </div>-->
-                                  </div>
-                                </div>
-                                <div class="form-group" align="center" [hidden]="submitted">
-                                  <button type="submit" class="btn btn-success" [disabled]="!userForm.form.valid">Підтвердити</button>
-                                </div>
-                                <div class="ln_solid"></div>
-                              </form>
+                              </div>
                             </div>
-                          </div>
+                            <div class="form-group" align="center" [hidden]="submitted">
+                              <button type="submit" class="btn btn-success" [disabled]="!userForm.form.valid">Підтвердити</button>
+                            </div>
+                            <div class="ln_solid"></div>
+                          </form>
                         </div>
                       </div>
                     </div>
-                    <div role="tabpanel" class="tab-pane fade" id="tab_content3" aria-labelledby="profile-tab">
-                       <div class="row">
-                        <div class="col-md-12 col-sm-12 col-xs-12">
-                          <div class="x_panel">
-                            <div class="x_title">
-                              <h2>Мої курси</h2>
-                              <div class="clearfix"></div>
-                            </div>
-                            <div class="x_content">
-                              <courses-table [userId]="123" [generalColumns]="courseListConfig.columns"></courses-table>
-                            </div>
-                          </div>
+                  </div>
+                </div>
+                <div role="tabpanel" class="tab-pane fade" id="tab_content3" aria-labelledby="profile-tab">
+                  <div class="row">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                      <div class="x_panel">
+                        <div class="x_title">
+                          <h2>Мої курси</h2>
+                          <div class="clearfix"></div>
+                        </div>
+                        <div class="x_content">
+                          <courses-table [userId]="123" [generalColumns]="courseListConfig.columns"></courses-table>
                         </div>
                       </div>
                     </div>
@@ -145,6 +139,8 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
 
 
     <!-- /page content -->
