--- a/imem/src/app/dashboard/course.component/course.component.html
+++ b/imem/src/app/dashboard/course.component/course.component.html
@@ -12,7 +12,7 @@
                 <ul class="nav navbar-right panel_toolbox">
                     <li><a class="" (click)="navigateToParent()"><i class="fa fa-reply-all"></i><b> Назад</b></a>
                     </li>
-                    <li><a class="" (click)="openModalClose()" *appAppLayout="'courseScope.deleteButton'"><i class="fa fa-remove"></i></a>
+                    <li><a class="" (click)="openModalClose()" *appLayout="'courseScope.deleteButton'"><i class="fa fa-remove"></i></a>
                     </li>
                 </ul>
                 <div class="clearfix"></div>
@@ -72,7 +72,7 @@
                         <button type="submit" class="btn btn-success" [disabled]="!courseForm.form.valid">Підтвердити</button>
                     </div>
                 </form>
-                <div class="form-group" align="center" [hidden]="!submitted" *appAppLayout="'courseScope.editButton'">
+                <div class="form-group" align="center" [hidden]="!submitted" *appLayout="'courseScope.editButton'">
                     <a class="btn btn-success"  (click)="formReset()"><i class="fa fa-edit m-right-xs"></i>Редагувати</a>
                 </div>
                 <div class="clearfix"></div>
