--- a/imem/src/app/dashboard/lecture.component/lecture.component.html
+++ b/imem/src/app/dashboard/lecture.component/lecture.component.html
@@ -1,6 +1,6 @@
 <div class="page-title">
     <div class="title_left">
-        <h3>Загальна інформація про лекцію</h3>
+        <h3>Загальна інформація про лекцію </h3>
     </div>
 </div>
 <div class="clearfix"></div>
@@ -10,30 +10,29 @@
             <div class="x_title">
                 <h2>Лекція [NAME]</h2>
                 <ul class="nav navbar-right panel_toolbox">
+                    <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                    </li>
                     <li><a class="" (click)="navigateToParent()"><i class="fa fa-reply-all"></i><b> Назад</b></a>
                     </li>
-                </ul>
+                </ul>                
                 <div class="clearfix"></div>
             </div>
             <div class="x_content">
-                <form class="form-horizontal form-label-left"  #courseForm="ngForm" (ngSubmit)="onSubmit()">
+                <form class="form-horizontal form-label-left" #courseForm="ngForm" (ngSubmit)="onSubmit()">
                     <div class="form-group">
                         <label>Назва</label>
                         <input class="form-control" value="Базова Лекція" required [readonly]="submitted">
                     </div>
                     <div class="form-group">
                         <label>Опис</label>
-                        <textarea style="height:200px;"
-                            class="resizable_textarea form-control"
-                            [readonly]="submitted"
-                            placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."></textarea>
+                        <textarea style="height:200px;" class="resizable_textarea form-control" [readonly]="submitted" placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."></textarea>
                     </div>
-                    <div class="form-group" align="center"  [hidden]="submitted">
+                    <div class="form-group" align="center" [hidden]="submitted">
                         <button type="submit" class="btn btn-success" [disabled]="!courseForm.form.valid">Підтвердити</button>
                     </div>
                 </form>
-                <div class="form-group" align="center" [hidden]="!submitted">
-                    <a class="btn btn-success"  (click)="formReset()"><i class="fa fa-edit m-right-xs"></i>Редагувати</a>
+                <div class="form-group" align="center" [hidden]="!submitted" *appLayout="'lectureScope.editLectureButton'">
+                    <a class="btn btn-success" (click)="formReset()"><i class="fa fa-edit m-right-xs"></i> Редагувати</a>
                 </div>
                 <div class="clearfix"></div>
             </div>
@@ -41,18 +40,62 @@
     </div>
 </div>
 <div class="row" id="comment-section" tabindex="0">
-    <div class="col-md-12" >
+    <div class="col-md-12">
         <div class="x_panel">
             <div class="x_title">
-            <h2>Коментарі <small></small></h2>
-            <ul class="nav navbar-right panel_toolbox">
-                <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                </li>
-                <li><a (click)="commentSection.toggleCommentSection()"><i class="fa fa-plus"></i></a>
-                </li>
-            </ul>
+                <h2>Матеріали <small></small></h2>
+                <ul class="nav navbar-right panel_toolbox">
+                    <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                    </li>
+                </ul>
+                <div class="clearfix"></div>
+            </div>
+            <div class="x_content">
+                <table class="table table-striped projects">
+                    <thead>
+                        <tr>
+                            <th style="width: 1%">#</th>
+                            <th style="width: 20%">Ім'я Файлу</th>
+                            <th style="width: 20%">Тип</th>
+                            <th style="width: 20%">Видалити</th>
 
-            <div class="clearfix"></div>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor='let file of fileList; let i = index' [attr.data-index]="i">
+                            <td>#{{i}}</td>
+                            <td>
+                                <a [href]="file.url" target="_blank">{{file.name}}</a>
+                            </td>
+                            <td>
+                                <img [src]="file.iconUrl" />
+                            </td>
+                            <td>
+                                <div class="btn btn-danger submit" (click)="removeFile(i)" align="right" style="padding: 0px 10px 0px 10px"><i class="fa fa-trash"></i></div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div class="form-group" align="center" *appLayout="'lectureScope.addFileButton'">
+                    <div class="btn btn-primary submit" (click)="openGooglePicker()" align="right"><i class="fa fa-plus m-right-xs"></i> Додати файл</div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row" id="comment-section" tabindex="0">
+    <div class="col-md-12">
+        <div class="x_panel">
+            <div class="x_title">
+                <h2>Коментарі <small></small></h2>
+                <ul class="nav navbar-right panel_toolbox">
+                    <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                    </li>
+                    <li><a (click)="commentSection.toggleCommentSection()"><i class="fa fa-plus"></i></a>
+                    </li>
+                </ul>
+
+                <div class="clearfix"></div>
             </div>
             <div class="x_content">
                 <comment-section #commentSection></comment-section>
