primeng set up, redundant dependencies clean up

--- a/imem/src/app/dashboard/course.component/course.component.html
+++ b/imem/src/app/dashboard/course.component/course.component.html
@@ -38,15 +38,15 @@
                     <div class="form-group" style="margin-top: 20px;">
                         <label class="control-label col-md-1 col-sm-3 col-xs-12" for="first-name">Початок</label>
                         <div class="col-md-3 col-sm-6 col-xs-12">
-                        <ng2-datepicker [options]="datepickerOption" [(ngModel)]="datepickerModelStartDate"
+                        <!--<ng2-datepicker [options]="datepickerOption" [(ngModel)]="datepickerModelStartDate"
                             name="datepickerModelStartDate" required
-                            ></ng2-datepicker>
+                            ></ng2-datepicker>-->
                         </div>
                         <label class="control-label col-md-1 col-sm-3 col-xs-12" for="first-name">Кінець</label>
                         <div class="col-md-3 col-sm-6 col-xs-12">
-                        <ng2-datepicker [options]="datepickerOption" [(ngModel)]="datepickerModelEndDate"
+                        <!--<ng2-datepicker [options]="datepickerOption" [(ngModel)]="datepickerModelEndDate"
                             name="datepickerModelEndDate" required
-                            ></ng2-datepicker>
+                            ></ng2-datepicker>-->
                         </div>
                     </div>
                     <div class="form-group">
