--- a/imem/src/app/login/login.component.html
+++ b/imem/src/app/login/login.component.html
@@ -7,7 +7,7 @@
 			<div class="animate form login_form">
 				<section class="login_content">
 					<form>
-						<h1>ИМЕМ</h1>
+						<h1>ІМЕМ</h1>
 						<!--<div>
 							<input [(ngModel)]="user.email" name="email" type="text"
 									class="form-control"
@@ -39,7 +39,7 @@
 							<div class="btn btn-default submit" (click)="login(2)" id="googleBtn">admin</div>-->
 							<!--<div class="btn btn-default submit" id="googleBtn">
 							</div>-->
-							<div class="btn btn-default submit" (click)="login()">Login with Google</div>
+							<div class="btn btn-default submit" (click)="login()">Увійти за допомогою Google</div>
 							<!--<a class="btn btn-default submit" (click)="login()" routerLink="" tabindex="3">Увійти</a>-->
 							<!--<a class="reset_pass" routerLink="/restorepassword" tabindex="4">Забув пароль?</a>-->
 						</div>
