--- a/imem/src/app/dashboard/lecture.component/lecture.component.html
+++ b/imem/src/app/dashboard/lecture.component/lecture.component.html
@@ -8,7 +8,7 @@
     <div class="col-md-12">
         <div class="x_panel">
             <div class="x_title">
-                <h2>Лекція [NAME]</h2>
+                <h2>Лекція</h2>
                 <ul class="nav navbar-right panel_toolbox">
                     <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                     </li>
