--- a/imem/src/app/dashboard/userdetails.gentelella/userdetails-g.component.html
+++ b/imem/src/app/dashboard/userdetails.gentelella/userdetails-g.component.html
@@ -104,7 +104,7 @@
                               <div class="col-md-6 col-sm-6 col-xs-12">
                                 <!--<input type="text" id="birthday" [(ngModel)]="modelUser.Birthday" name="Birthday" [readonly]="submitted" class="form-control col-md-7 col-xs-12"
                                       >-->
-                                <ng2-datepicker [options]="datepickerOption" [(ngModel)]="datepickerModel" name="Birthday" required></ng2-datepicker>
+                                <!--<ng2-datepicker [options]="datepickerOption" [(ngModel)]="datepickerModel" name="Birthday" required></ng2-datepicker>-->
                                 <!--<div class="col-xs-6" [hidden]="firstname.valid || firstname.pristine" class="alert alert-danger">
                                           Обов'язкове поле
                                       </div>-->
