--- a/imem/src/styles.css
+++ b/imem/src/styles.css
@@ -1,5 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
+.x_panel .ui-datatable th.ui-state-active{
+  background: #324b63;
+}
 .collapsed{
   height: auto;
 }
