--- a/imem/src/app/dashboard/course.component/course.component.html
+++ b/imem/src/app/dashboard/course.component/course.component.html
@@ -12,12 +12,16 @@
                 <ul class="nav navbar-right panel_toolbox">
                     <li><a class="" (click)="navigateToParent()"><i class="fa fa-reply-all"></i><b> Назад</b></a>
                     </li>
-                    <li><a class="" (click)="openModalClose()" *appLayout="'courseScope.deleteButton'"><i class="fa fa-remove"></i></a>
+                    <li><a class="" (click)="deleteCourseModal()" *appLayout="'courseScope.deleteButton'"><i class="fa fa-remove"></i></a>
                     </li>
                 </ul>
                 <div class="clearfix"></div>
             </div>
             <div class="x_content">
+                <div class="deleteDialog">
+                    <p-confirmDialog closeOnEscape="true" [responsive]="true" width="500" acceptLabel="Так" rejectLabel="Ні">
+                    </p-confirmDialog>
+                </div>
                 <form class="form-horizontal form-label-left"  #courseForm="ngForm" (ngSubmit)="onSubmit()">
                     <div class="form-group">
                         <label>Назва</label>
