--- a/imem/src/app/dashboard/course.component/course.component.html
+++ b/imem/src/app/dashboard/course.component/course.component.html
@@ -40,17 +40,23 @@
                             placeholder="Введіть опис тут"></textarea>
                     </div>
                     <div class="form-group" style="margin-top: 20px;">
-                        <label class="control-label col-md-1 col-sm-3 col-xs-12" for="first-name">Початок</label>
-                        <div class="col-md-3 col-sm-6 col-xs-12">
-                        <!--<ng2-datepicker [options]="datepickerOption" [(ngModel)]="datepickerModelStartDate"
-                            name="datepickerModelStartDate" required
-                            ></ng2-datepicker>-->
+                        <label class="control-label col-md-2 col-sm-3 col-xs-12" for="first-name">Початок</label>
+                        <div class="col-md-4 col-sm-6 col-xs-12">
+                        <p-calendar [(ngModel)]="modelCourse.StartDate"
+                            [showIcon]="true"
+                            [disabled]="submitted"
+                            [locale]="locale"
+                            [inline]="true"
+                            name="StartDate"></p-calendar>
                         </div>
                         <label class="control-label col-md-1 col-sm-3 col-xs-12" for="first-name">Кінець</label>
-                        <div class="col-md-3 col-sm-6 col-xs-12">
-                        <!--<ng2-datepicker [options]="datepickerOption" [(ngModel)]="datepickerModelEndDate"
-                            name="datepickerModelEndDate" required
-                            ></ng2-datepicker>-->
+                        <div class="col-md-4 col-sm-6 col-xs-12">
+                        <p-calendar [(ngModel)]="modelCourse.EndDate"
+                            [showIcon]="true"
+                            [disabled]="submitted"
+                            [locale]="locale"
+                            [inline]="true"
+                            name="EndDate"></p-calendar>
                         </div>
                     </div>
                     <div class="form-group">
