--- a/imem/src/app/dashboard/request-panel/request-panel.component.html
+++ b/imem/src/app/dashboard/request-panel/request-panel.component.html
@@ -25,73 +25,135 @@
 				<div id="myTabContent" class="tab-content">
 					<div role="tabpanel" class="tab-pane fade active in" id="tab_content1" aria-labelledby="home-tab">
 						<!-- start project list -->
-						<table class="table table-striped projects">
-							<thead>
-								<tr>
-									<th style="width: 1%">#</th>
-									<th style="width: 20%">Ім'я</th>
-									<th>Статус</th>
-									<th></th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr *ngFor='let student of studentRequests; let i = index' [attr.data-index]="i">
-									<td>#{{i}}</td>
-									<td>
-										<a>{{student.Name}}</a>
-										<br />
-										<small>Подано 10.10.2016</small>
-									</td>
-									<td>
-										<span *ngIf="student.Status == 0" class="label label-default">В очікуванні</span>
-										<span *ngIf="student.Status == 1" class="label label-default">Прийнято</span>
-										<span *ngIf="student.Status == 2" class="label label-default">Відмовлено</span>
-									</td>
-									<td>
-										<a class="btn btn-success btn-xs" (click)="acceptItem(i)"><i class="fa fa-check"></i> Прийняти </a>
-										<a class="btn btn-warning btn-xs" (click)="declineItem(i)"><i class="fa fa-pencil"></i> Відмовити </a>
-										<a class="btn btn-danger btn-xs" (click)="removeItem(i)"><i class="fa fa-trash-o"></i> Видалити </a>
-									</td>
-								</tr>
-							</tbody>
-						</table>
+						<p-dataTable 
+							[value]="portalData"
+							[paginator]="true"
+							[rows]="5"
+							[pageLinks]="3"
+							[rowsPerPageOptions]="[5,10,20]"
+							emptyMessage="Немає результатів">
+
+							<p-column header="Ім'я"
+								field="Name"
+								[sortable]="true"
+								[filter]="true"
+								filterMatchMode="contains"
+								[filterPlaceholder]="">
+								<ng-template let-request="rowData" pTemplate="body">
+									<div style="text-align: center;" class="btn btn-link request-content">
+										<a [routerLink]="['/dashboard/students/' + request.StudentId]" >
+										<span class="request-content">
+											{{request.Name}}
+										</span>
+										</a>
+									</div>
+								</ng-template>
+							</p-column>
+							<p-column header="Подано"
+								field="Date"
+								[sortable]="true"
+								[filter]="true"
+								filterMatchMode="contains"
+								[filterPlaceholder]="">
+								<ng-template let-request="rowData" pTemplate="body">
+									<div style="text-align: center">
+										<span class="request-content">
+											{{request.Date | date: 'dd/MM/yyyy'}}
+										</span>
+									</div>
+								</ng-template>
+							</p-column>
+							<p-column header="Статус">
+								<ng-template let-request="rowData" pTemplate="body">
+									<div style="text-align: center">
+										<span *ngIf="request.Status == 0" class="label label-default">В очікуванні</span>
+										<span *ngIf="request.Status == 1" class="label label-default">Прийнято</span>
+										<span *ngIf="request.Status == 2" class="label label-default">Відмовлено</span>
+									</div>
+								</ng-template>
+							</p-column>
+							<p-column>
+								<ng-template let-request="rowData" pTemplate="body">
+									<div style="text-align: center">
+										<a class="btn btn-success btn-xs" (click)="acceptItem(request)"><i class="fa fa-check"></i> Прийняти </a>
+										<a class="btn btn-warning btn-xs" (click)="declineItem(request)"><i class="fa fa-pencil"></i> Відмовити </a>
+									</div>
+								</ng-template>
+							</p-column>
+						</p-dataTable>
 						<!-- end project list -->
 					</div>
 					<div role="tabpanel" class="tab-pane fade" id="tab_content3" aria-labelledby="profile-tab">
-						<table class="table table-striped projects">
-							<thead>
-								<tr>
-									<th style="width: 1%">#</th>
-									<th style="width: 20%">Ім'я</th>
-									<th style="width: 20%">Курс</th>
-									<th>Статус</th>
-									<th></th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr *ngFor='let student of studentRequests; let i = index' [attr.data-index]="i">
-									<td>#{{i}}</td>
-									<td>
-										<a>{{student.Name}}</a>
-										<br />
-										<small>Подано 10.10.2016</small>
-									</td>
-									<td>
-										<a>Ім'я курсу#</a>
-									</td>
-									<td>
-										<span *ngIf="student.Status == 0" class="label label-default">В очікуванні</span>
-										<span *ngIf="student.Status == 1" class="label label-default">Прийнято</span>
-										<span *ngIf="student.Status == 2" class="label label-default">Відмовлено</span>
-									</td>
-									<td>
-										<a class="btn btn-success btn-xs" (click)="acceptItem(i)"><i class="fa fa-check"></i> Прийняти </a>
-										<a class="btn btn-warning btn-xs" (click)="declineItem(i)"><i class="fa fa-pencil"></i> Відмовити </a>
-										<a class="btn btn-danger btn-xs" (click)="removeItem(i)"><i class="fa fa-trash-o"></i> Видалити </a>
-									</td>
-								</tr>
-							</tbody>
-						</table>
+						<p-dataTable 
+							[value]="courseRequestData"
+							[paginator]="true"
+							[rows]="5"
+							[pageLinks]="3"
+							[rowsPerPageOptions]="[5,10,20]"
+							emptyMessage="Немає результатів">
+
+							<p-column header="Ім'я"
+								field="Name"
+								[sortable]="true"
+								[filter]="true"
+								filterMatchMode="contains"
+								[filterPlaceholder]="">
+								<ng-template let-request="rowData" pTemplate="body">
+									<div style="text-align: center" class="btn btn-link">
+										<a [routerLink]="['/dashboard/students/' + request.StudentId]">
+											<span class="request-content">
+											{{request.Name}}
+											</span>
+										</a>
+									</div>
+								</ng-template>
+							</p-column>
+							<p-column header="Подано"
+								field="Date"
+								[sortable]="true"
+								[filter]="true"
+								filterMatchMode="contains"
+								[filterPlaceholder]="">
+								<ng-template let-request="rowData" pTemplate="body">
+									<div style="text-align: center">
+										{{request.Date | date: 'dd/MM/yyyy'}}
+									</div>
+								</ng-template>
+							</p-column>
+							<p-column header="Курс"
+								field="CourseName"
+								[sortable]="true"
+								[filter]="true"
+								filterMatchMode="contains"
+								[filterPlaceholder]="">
+								<ng-template let-request="rowData" pTemplate="body">
+									<div style="text-align: center" class="btn btn-link">
+										<a [routerLink]="['/dashboard/courses/']">
+											<span class="request-content">
+												{{request.CourseName}}
+											</span>
+										</a>
+									</div>
+								</ng-template>
+							</p-column>
+							<p-column header="Статус">
+								<ng-template let-request="rowData" pTemplate="body">
+									<div style="text-align: center">
+										<span *ngIf="request.Status == 0" class="label label-default">В очікуванні</span>
+										<span *ngIf="request.Status == 1" class="label label-default">Прийнято</span>
+										<span *ngIf="request.Status == 2" class="label label-default">Відмовлено</span>
+									</div>
+								</ng-template>
+							</p-column>
+							<p-column>
+								<ng-template let-request="rowData" pTemplate="body">
+									<div style="text-align: center">
+										<a class="btn btn-success btn-xs" (click)="acceptItem(request)"><i class="fa fa-check"></i> Прийняти </a>
+										<a class="btn btn-warning btn-xs" (click)="declineItem(request)"><i class="fa fa-pencil"></i> Відмовити </a>
+									</div>
+								</ng-template>
+							</p-column>
+						</p-dataTable>
 					</div>
 				</div>
 			</div>
